@@ -214,6 +214,9 @@ recalc_routes_interval=3600
 max_entries=5000
 # files smaller than min_filesize wont be added to speedstats file
 min_filesize=5000000
+# if a site has a low rank, but transfers are fast, that site can end up with a high destination priority at races
+# if this setting is enabled, speedstats will no longer change this priority over different ranks, but only change order within the same ranks
+reduced_speedstat_weight=0
 
 [speedtest]
 # when uploading a speedtest file from slftp to a site directly,
